--- a/html/index.html
+++ b/html/index.html
@@ -79,13 +79,6 @@
 
     <div class="container contacts">
       <div class="row">
-        <div class="col apple" href="https://itunes.apple.com/us/album/anthracite-ep/id1218497353">
-          <i class="fa fa-apple"></i>
-        </div>
-        <div class="col bandcamp" href="https://ptfb.bandcamp.com/album/anthracite">
-          <i class="fa fa-bandcamp"></i>
-        </div>
-
         <div class="col facebook" href="https://www.facebook.com/PaintTheFutureBlack">
           <i class="fa fa-facebook"></i>
         </div>
@@ -97,14 +90,6 @@
         </div>
         <div class="col vk" href="https://vk.com/ptfbofficial">
           <i class="fa fa-vk"></i>
-        </div>
-        <div class="col spotify"
-             href="https://open.spotify.com/album/3JFTkTwq2x5dyeKeE1KLyn?play=true&utm_source=open.spotify.com&utm_medium=open">
-          <i class="fa fa-spotify"></i>
-        </div>
-        <div class="col amazon"
-             href="https://www.amazon.com/Anthracite-Paint-Future-Black/dp/B06XRRNDK4/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1490609091&sr=1-1-mp3-albums-bar-strip-0&keywords=paint+the+future+black">
-          <i class="fa fa-amazon"></i>
         </div>
         <div class="col soundcloud" href="https://soundcloud.com/ptfbofficial">
           <i class="fa fa-soundcloud"></i>
@@ -151,10 +136,12 @@
 
   <h1><kbd>Sign up for black newsletter</kbd></h1>
   <h1><kbd>and get Guitar Pro Tabs for free</kbd></h1>
-  <label>
-    <input type="search" class="search-field" placeholder="Email"
-           title="Enter your Email..."/>
-  </label><input type="submit" class="search-submit" value="SIGN UP" onclick="sendTheMail()"/>
+  <div>
+    <label>
+      <input type="search" class="search-field" placeholder="Email"
+             title="Enter your Email..."/>
+    </label><input type="submit" class="search-submit" value="SIGN UP" onclick="sendTheMail()"/>
+  </div>
 
 </div>
 
@@ -181,7 +168,7 @@
 </div>
 
 
-<div class="container contacts">
+<div class="container contacts" id="contacts">
   <div class="row">
     <div class="col apple" href="https://itunes.apple.com/us/album/anthracite-ep/id1218497353">
       <i class="fa fa-apple"></i>
