--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
+
+  <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
 
@@ -168,6 +170,28 @@
 </div>
 
 
+
+<div class="container" id="concerts">
+  <div class="row">
+
+    <div class="col">
+      <div class="concert">
+        <h1>8.03</h1>
+        <span>Brugge, Minsk</span>
+      </div>
+    </div>
+
+    <div class="col">
+      <div id="map">
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+
 <div class="container contacts" id="contacts">
   <div class="row">
     <div class="col apple" href="https://itunes.apple.com/us/album/anthracite-ep/id1218497353">
@@ -212,11 +236,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
 <script src="../js/main.js"></script>
+<script src="../js/map.js"></script>
 
-
-
-<script type="text/javascript" src="../js/mandrill.js"></script>
 
 </body>
 </html>
