--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-  <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;load=package.full"></script>
+  <script src="../js/map.js"></script>
 </head>
 <body>
 
@@ -179,6 +180,10 @@
         <h1>8.03</h1>
         <span>Brugge, Minsk</span>
       </div>
+      <div class="concert">
+        <h1>8.03</h1>
+        <span>Brugge, Minsk</span>
+      </div>
     </div>
 
     <div class="col">
@@ -238,7 +243,7 @@
         crossorigin="anonymous"></script>
 
 <script src="../js/main.js"></script>
-<script src="../js/map.js"></script>
+
 
 
 </body>
